# gwctrl

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  Makefile  README.md  ctrl.c  ctrl.h  gwctrl.c  gwctrl.h  location.c  location.h  meson.build  sysinfo.c  sysinfo.h  thermal.c  thermal.h
ci/: Dockerfile  deploy_key.enc
